--- a/index.html
+++ b/index.html
@@ -1,1 +1,311 @@
-fff
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Hiring: Viral Dog Content Writer</title>
+    <style>
+        /* --- General Styles & Resets --- */
+        body {
+            margin: 0;
+            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', Helvetica, Arial, sans-serif;
+            line-height: 1.6;
+            background-color: #f8f9fa;
+            color: #333;
+        }
+        .container {
+            max-width: 800px;
+            margin: 0 auto;
+            padding: 20px;
+        }
+        h1, h2, h3 {
+            line-height: 1.2;
+        }
+        h2 {
+            border-bottom: 2px solid #e0e0e0;
+            padding-bottom: 10px;
+            margin-top: 40px;
+        }
+        a {
+            color: #007bff;
+        }
+
+        /* --- Hero Section --- */
+        .hero {
+            background: linear-gradient(135deg, #e3eeff, #f3e7e9);
+            text-align: center;
+            padding: 60px 20px;
+            border-bottom: 1px solid #ddd;
+        }
+        .hero h1 {
+            font-size: 48px;
+            font-weight: bold;
+            margin: 0 0 10px 0;
+            color: #212529;
+        }
+        .hero p {
+            font-size: 20px;
+            font-weight: 300;
+            max-width: 600px;
+            margin: 0 auto;
+            color: #495057;
+        }
+
+        /* --- Content sections --- */
+        section {
+            padding: 20px 0;
+        }
+        .list-style-none {
+            list-style: none;
+            padding-left: 0;
+        }
+        .list-style-none li {
+            margin-bottom: 10px;
+        }
+        .example-topic {
+            background-color: #e9ecef;
+            border-left: 4px solid #007bff;
+            padding: 15px;
+            margin: 15px 0;
+            font-style: italic;
+        }
+        .check-list li, .cross-list li {
+            font-size: 1.1em;
+            margin-bottom: 12px;
+        }
+        .highlight-box {
+            background-color: #fffbe6;
+            border: 1px solid #ffe58f;
+            padding: 20px;
+            margin-top: 20px;
+            border-radius: 5px;
+        }
+
+        /* --- Process Section --- */
+        .process-steps {
+            list-style: none;
+            padding: 0;
+            counter-reset: step-counter;
+        }
+        .process-steps li {
+            counter-increment: step-counter;
+            margin-bottom: 20px;
+            position: relative;
+            padding-left: 40px;
+        }
+        .process-steps li::before {
+            content: counter(step-counter);
+            position: absolute;
+            left: 0;
+            top: 0;
+            width: 30px;
+            height: 30px;
+            background-color: #28a745;
+            color: white;
+            border-radius: 50%;
+            text-align: center;
+            line-height: 30px;
+            font-weight: bold;
+        }
+
+        /* --- CTA Section --- */
+        .cta-section {
+            text-align: center;
+            background-color: #fff;
+            padding: 40px 20px;
+            border-radius: 8px;
+            margin-top: 30px;
+        }
+         .cta-section p {
+            font-size: 18px;
+         }
+        .cta-button {
+            display: inline-block;
+            background-color: #28a745;
+            color: #fff;
+            padding: 15px 30px;
+            font-size: 20px;
+            font-weight: bold;
+            text-decoration: none;
+            border-radius: 5px;
+            transition: background-color 0.3s ease;
+            border: none;
+            cursor: pointer;
+        }
+        .cta-button:hover {
+            background-color: #218838;
+        }
+        .trust-element {
+            margin-top: 15px;
+            font-size: 0.9em;
+            color: #6c757d;
+        }
+
+        /* --- FAQ Section --- */
+        .faq-item {
+            margin-bottom: 15px;
+        }
+        .faq-item strong {
+            display: block;
+        }
+
+        /* --- Responsive Design --- */
+        @media (max-width: 600px) {
+            .hero h1 {
+                font-size: 36px;
+            }
+            .hero p {
+                font-size: 18px;
+            }
+            .container {
+                padding: 15px;
+            }
+        }
+    </style>
+</head>
+<body>
+
+    <header class="hero">
+        <h1>Write Viral Dog Content. Work Remotely. Get Paid for Quality.</h1>
+        <p>We're hiring content writers who can turn breed-specific dog topics into scroll-stopping vertical video scripts—using real research from dog owner communities.</p>
+    </header>
+
+    <main class="container">
+
+        <!-- SECTION 2: ABOUT THE ROLE -->
+        <section id="about">
+            <h2>What You'll Actually Do</h2>
+            <p>As a technical content writer on our team, you'll create 50-second vertical video scripts (like TikTok/Instagram Reels) focused on specific dog breeds.</p>
+            <h3>Your Process:</h3>
+            <ol>
+                <li><strong>Research:</strong> 🔍 Dive into Reddit threads, Facebook groups, and breed-specific forums to find what dog owners are actually saying.</li>
+                <li><strong>Extract:</strong> Pull authentic quotes (UGC - User Generated Content) that reveal pain points, questions, and emotions.</li>
+                <li><strong>Write:</strong> ✏️ Craft conversational scripts that weave these real owner voices into educational, engaging content.</li>
+                <li><strong>Simplify:</strong> Turn complex topics (health issues, behavior problems, training challenges) into relatable analogies.</li>
+            </ol>
+
+            <h3>Example Topics:</h3>
+            <div class="example-topic">"Why Your French Bulldog Breathes Like That (And When It's Dangerous)"</div>
+            <div class="example-topic">"The Real Reason Your Shiba Inu Ignores You"</div>
+
+            <h3>Script Structure You'll Follow:</h3>
+            <ul class="list-style-none">
+                <li><strong>Hook (0-2 seconds):</strong> Stop the scroll</li>
+                <li><strong>Problem Setup (2-8 seconds):</strong> Present the issue</li>
+                <li><strong>Revelations with UGC (8-40 seconds):</strong> Educate using real dog owner quotes</li>
+                <li><strong>CTA (40-50 seconds):</strong> Drive engagement</li>
+            </ul>
+        </section>
+
+        <!-- SECTION 3: WHO WE'RE LOOKING FOR -->
+        <section id="who">
+            <h2>Is This You?</h2>
+            <p>You're a great fit if:</p>
+            <ul class="list-style-none check-list">
+                <li>✅ You're a dog owner or deeply familiar with online dog communities</li>
+                <li>✅ You can write like you talk—conversational, natural, zero corporate speak</li>
+                <li>✅ You love research and can spend 30 minutes digging through Reddit threads to find gold</li>
+                <li>✅ You understand how to make complex ideas simple (without dumbing them down)</li>
+                <li>✅ You're comfortable using AI tools (ChatGPT, Claude) to assist your workflow</li>
+                <li>✅ You follow instructions precisely and meet deadlines</li>
+                <li>✅ You want feedback and are willing to revise your work</li>
+            </ul>
+            <p>This is <strong>NOT</strong> for you if:</p>
+            <ul class="list-style-none cross-list">
+                <li>❌ <strong>You write generic, "content mill" style articles that could be about anything</strong></li>
+                <li>❌ You've never spent time in dog forums, Facebook groups, or breed communities</li>
+                <li>❌ You think "professional writing" means formal, academic tone</li>
+                <li>❌ <strong>You just want to pump out AI-generated content without real research</strong></li>
+                <li>❌ You can't handle constructive feedback</li>
+            </ul>
+            <div class="highlight-box">
+                <strong>What We Care About Most:</strong><br>
+                <em>We don't care where you went to school or if you have 10 years of experience. We care if you can make a French Bulldog owner stop scrolling and think "OMG that's exactly what my dog does!"</em>
+            </div>
+        </section>
+
+        <!-- SECTION 4: WHY THIS OPPORTUNITY -->
+        <section id="why">
+            <h2>Why Join Our Team?</h2>
+            <ul class="list-style-none">
+                <li>💰 <strong>Pay Based on Quality</strong><br>
+                We compensate based on output quality, not hours worked. The better your research and writing, the more you earn.</li>
+                 <li>🌍 <strong>100% Remote</strong><br>
+                Work from anywhere. As long as you have internet and can communicate in English, you're good.</li>
+                <li>🤖 <strong>AI-Assisted Workflow</strong><br>
+                We encourage using AI tools to help you research and draft. We care about the final result.</li>
+                <li>📚 <strong>Learn a Valuable Skill</strong><br>
+                UGC-driven content creation is one of the most in-demand skills in marketing right now.</li>
+                <li>🐕 <strong>Work on Topics You Enjoy</strong><br>
+                If you love dogs, this beats writing about SaaS products or accounting software.</li>
+                <li>🎯 <strong>Clear Expectations</strong><br>
+                We provide frameworks, examples, and detailed feedback. You'll know exactly what "good" looks like.</li>
+                <li>📈 <strong>Growth Potential</strong><br>
+                Start with video scripts, potentially expand to blog posts, email newsletters, or more.</li>
+            </ul>
+        </section>
+
+        <!-- SECTION 5: THE PROCESS -->
+        <section id="process">
+            <h2>How It Works (Transparent Hiring Process)</h2>
+            <ol class="process-steps">
+                <li>
+                    <strong>Apply + Complete 100-Word Test (Today)</strong><br>
+                    Click the "Apply Now" button below. You'll fill out a short form and choose one of two 100-word test writing projects. ⏱️ <em>Time commitment: 30-60 minutes</em>
+                </li>
+                <li>
+                    <strong>We Review Your Test (Within 3-5 Business Days)</strong><br>
+                    Our team evaluates your submission based on a detailed rubric. 📊 Scoring is systematic and fair.
+                </li>
+                 <li>
+                    <strong>Top Candidates Advance to Round 2 (If You Pass)</strong><br>
+                    If your Round 1 test scores 7/10 or higher, you'll receive an email with instructions for a longer test project.
+                </li>
+                <li>
+                    <strong>Final Selection & Onboarding</strong><br>
+                    Top performers from Round 2 get hired! We'll send you an onboarding guide and your first real assignment.
+                </li>
+            </ol>
+        </section>
+
+        <!-- SECTION 6: APPLY NOW (Primary CTA) -->
+        <section id="apply" class="cta-section">
+            <h2>Ready to Show Us What You've Got?</h2>
+            <p>Click below to access the application form. You'll complete a short questionnaire and one 100-word test writing project.</p>
+            <!-- Replace "#" with your actual Google Form link -->
+            <a href="#" class="cta-button">Apply Now - Start Your Test</a>
+            <p class="trust-element">100+ writers have applied. Join them.</p>
+        </section>
+
+        <!-- SECTION 7: FAQ -->
+        <section id="faq">
+            <h2>Frequently Asked Questions</h2>
+            <div class="faq-item">
+                <strong>Q: Do I need to be a professional writer?</strong>
+                A: No. We care about your ability to research, write conversationally, and understand dog owners—not your credentials.
+            </div>
+            <div class="faq-item">
+                <strong>Q: Can I use ChatGPT or Claude to help write?</strong>
+                A: Yes! We encourage it. Just make sure the final output is authentic, well-researched, and matches our quality standards.
+            </div>
+            <div class="faq-item">
+                <strong>Q: How much does this pay?</strong>
+                A: Payment is based on output quality and volume. We'll discuss specific rates with candidates who pass Round 2.
+            </div>
+            <div class="faq-item">
+                <strong>Q: How many hours per week?</strong>
+                A: Flexible. This can be a side gig (5-10 hours/week) or more substantial (20+ hours/week) depending on your needs.
+            </div>
+             <div class="faq-item">
+                <strong>Q: I'm not a dog owner. Can I still apply?</strong>
+                A: Yes, if you're deeply familiar with dog communities and can demonstrate understanding of dog owner language.
+            </div>
+        </section>
+
+        <footer style="text-align: center; padding: 20px 0; color: #6c757d; font-size: 0.9em; border-top: 1px solid #e0e0e0; margin-top: 20px;">
+           <p>Our Commitment to Applicants: We review every submission and you'll hear back within 5 business days. We don't ghost.</p>
+        </footer>
+
+    </main>
+</body>
+</html>
