--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-html
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -110,7 +110,7 @@ html
 <div class="container">
     <header>
         <h1>🎥 We're Hiring: Dog Breed Content Writers</h1>
-        <p class="hero-sub">"We're looking for people who can make a dog owner say 'That's EXACTLY my dog!'"</p>
+        <p class="hero-sub">"We're looking for writers who can make a dog owner say 'That's EXACTLY my dog!'"</p>
         <a href="https://docs.google.com/forms/d/e/1FAIpQLSewNdjMkMQu9CwBPBMP7Jvwn0YQWKTbij1ugqzLExF2bcpTxg/viewform" class="btn">Apply Now - Start Your Test</a>
     </header>
 
@@ -166,7 +166,7 @@ html
         <h2>Why Join Our Team? 🌍</h2>
         <ul class="checklist">
             <li>💰 <strong>Pay Based on Quality:</strong> We pay for results, not hours. High quality = High pay.</li>
-            <li>🏠 <strong>100% Remote:</strong> Work from anywhere in the Philippines, SA, Kenya, Nigeria, Pakistan, or Ghana.</li>
+            <li>🏠 <strong>100% Remote:</strong> Work from anywhere.</li>
             <li>🤖 <strong>AI-Assisted Workflow:</strong> We encourage AI tools to help research and draft.</li>
             <li>📈 <strong>Master the 'UGC Framework':</strong> Learn the art of high-demand, retention-based scripting.</li>
             <li>🐾 <strong>Work on Topics You Enjoy:</strong> Much better than writing about SaaS or accounting!</li>
